# use_thrid_lib

./: CMakeLists.txt  README.md  main.cpp  runTest.sh
mediapipe/: mediapipeInclude.h  packet.cc  packet.h  testCode.cpp  testCode.h  testPacket.cpp  testPacket.h
mydebug/: debugInclude.cpp  degbugInclude.h
thirdLib/: hello.proto  run_hellp_protobuf.sh  useAbsl.cpp  useAbsl.h  useGlog.cpp  useGlog.h  useProbuf.cpp  useProbuf.h
thirdLib/pb_src/: hello.pb.cc  hello.pb.h
useGtest/: testRun.sh
useGtest/myMath/: add.cpp
useGtest/tests/myMath/: addTest.cpp
